kubernetes-networks/dashboard/dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: kubernetes-dashboard
  name: dashboard-301
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/permanent-redirect: /dashboard/
    # Uncomment this to debug rewrite rules
    # nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
spec:
  rules:
    - http:
        paths:
          - path: /dashboard$
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 443
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: kubernetes-dashboard
  name: dashboard
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # Uncomment this to debug rewrite rules
    # nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
spec:
  rules:
    - http:
        paths:
          - path: /dashboard/(.*)
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 443
